Bugs resolved     TASKS 	- Arrow animation was duplicated, now its not 	- Trash icon now works properly, it was hidden under tinymce container 	- Fonts displayed on tinymce menu have been tested and selected

--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -43,6 +43,7 @@
   position: absolute;
   right: 0px;
   cursor: pointer;
+  z-index: 10;
 }
 #templateGenerator #templateGeneratorBody .arrowIcon {
   z-index: 10;
@@ -51,10 +52,6 @@
   left: 45%;
   top: 45%;
   opacity: 0;
-}
-#templateGenerator #templateGeneratorBody .arrowIcon:hover {
-  animation-name: makeArrowVisible;
-  animation-duration: 1s;
 }
 #templateGenerator #templateGeneratorBody .widgetContent {
   margin-top: 20px;
